<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android= "http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#686699"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="350dp"
            android:layout_height="400dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/todo"
            tools:srcCompat="@tools:sample/backgrounds/scenic[12]" />

        <Button
            android:id="@+id/button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="90dp"
            android:background="@android:drawable/screen_background_light_transparent"
            android:text="@string/connect_to_station"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@android:drawable/screen_background_light_transparent"
            android:text="@string/connect_to_web"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/button2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@android:drawable/screen_background_light_transparent"
            android:text="@string/history"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/button3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@android:drawable/screen_background_light_transparent"
            android:text="@string/help"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/button4"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@android:drawable/screen_background_light_transparent"
            android:text="@string/about_app"
            android:textSize="18sp" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>